log
Thu 25 Apr 2024 01:19:40 AM UTC: 
 hashmap.c | 48 +++++++++++++++++-------------------------------
 1 file changed, 17 insertions(+), 31 deletions(-)
 tests:  0|6
total_score: 0/70
18cbc21
Thu 25 Apr 2024 01:20:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7228a96
Thu 25 Apr 2024 03:23:03 AM UTC: 
 hashmap.c | 46 +++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 41 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:97:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   97 |   return map->key;
      |             ^~
hashmap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e0b0ea8
Thu 25 Apr 2024 03:24:48 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
a475566
